--- a/package.json
+++ b/package.json
@@ -1,33 +1,29 @@
 {
-  "name": "trabalho-final",
-  "version": "1.0.0",
-  "description": "",
-  "main": "index.js",
+  "name": "trabalhofinal-frontend",
+  "private": true,
+  "version": "0.0.0",
+  "type": "module",
   "scripts": {
-    "start": "node api/index.js",
-    "dev": "nodemon api/index.js",
-    "build": "vite build"
+    "dev": "vite",
+    "build": "vite build",
+    "lint": "eslint . --ext js,jsx --report-unused-disable-directives --max-warnings 0",
+    "preview": "vite preview"
   },
-  "keywords": [],
-  "author": "",
-  "license": "ISC",
   "dependencies": {
-    "axios": "^1.6.0",
-    "body-parser": "^1.20.2",
-    "cors": "^2.8.5",
-    "dotenv": "^16.3.1",
-    "express": "^4.18.2",
-    "mysql": "^2.18.1",
-    "pg": "^8.11.3",
+    "axios": "^1.6.2",
     "react": "^18.2.0",
     "react-dom": "^18.2.0",
-    "react-icons": "^4.11.0",
-    "react-router-dom": "^6.18.0"
+    "react-icons": "^4.12.0",
+    "react-router-dom": "^6.20.1"
   },
   "devDependencies": {
-    "eslint": "^8.55.0",
+    "@types/react": "^18.2.37",
+    "@types/react-dom": "^18.2.15",
+    "@vitejs/plugin-react": "^4.2.0",
+    "eslint": "^8.53.0",
     "eslint-plugin-react": "^7.33.2",
-    "nodemon": "^3.0.2",
-    "vite": "^5.0.4"
+    "eslint-plugin-react-hooks": "^4.6.0",
+    "eslint-plugin-react-refresh": "^0.4.4",
+    "vite": "^5.0.0"
   }
 }
